@@ -97,38 +97,45 @@ class ConfigurationActionsInvocationTest < Test::Unit::TestCase
   end
 
   def test_sudo_should_default_to_sudo
-    @config.expects(:run).with("sudo ls", {})
+    @config.expects(:run).with("sudo -p 'sudo password: ' ls", {})
     @config.sudo "ls"
   end
 
   def test_sudo_should_use_sudo_variable_definition
-    @config.expects(:run).with("/opt/local/bin/sudo ls", {})
+    @config.expects(:run).with("/opt/local/bin/sudo -p 'sudo password: ' ls", {})
     @config.options[:sudo] = "/opt/local/bin/sudo"
     @config.sudo "ls"
   end
 
   def test_sudo_should_interpret_as_option_as_user
-    @config.expects(:run).with("sudo -u app ls", {})
+    @config.expects(:run).with("sudo -p 'sudo password: ' -u app ls", {})
     @config.sudo "ls", :as => "app"
   end
 
   def test_sudo_should_pass_options_through_to_run
-    @config.expects(:run).with("sudo ls", :foo => "bar")
+    @config.expects(:run).with("sudo -p 'sudo password: ' ls", :foo => "bar")
     @config.sudo "ls", :foo => "bar"
   end
 
-  def test_sudo_behavior_callback_should_send_password_when_prompted
-    ch = mock("channel")
-    ch.expects(:send_data).with("g00b3r\n")
-    @config.options[:password] = "g00b3r"
-    @config.sudo_behavior_callback(nil)[ch, nil, "Password: "]
+  def test_sudo_should_interpret_sudo_prompt_variable_as_custom_prompt
+    @config.set :sudo_prompt, "give it to me: "
+    @config.expects(:run).with("sudo -p 'give it to me: ' ls", {})
+    @config.sudo "ls"
   end
 
-  def test_sudo_behavior_callback_should_send_password_when_prompted_with_SuSE_dialect
+  def test_sudo_behavior_callback_should_send_password_when_prompted_with_default_sudo_prompt
     ch = mock("channel")
     ch.expects(:send_data).with("g00b3r\n")
     @config.options[:password] = "g00b3r"
-    @config.sudo_behavior_callback(nil)[ch, nil, "user's password: "]
+    @config.sudo_behavior_callback(nil)[ch, nil, "sudo password: "]
+  end
+
+  def test_sudo_behavior_callback_should_send_password_when_prompted_with_custom_sudo_prompt
+    ch = mock("channel")
+    ch.expects(:send_data).with("g00b3r\n")
+    @config.set :sudo_prompt, "give it to me: "
+    @config.options[:password] = "g00b3r"
+    @config.sudo_behavior_callback(nil)[ch, nil, "give it to me: "]
   end
 
   def test_sudo_behavior_callback_with_incorrect_password_on_first_prompt
